updated the cloudformation and the api docs
