# internal/celeste/handler.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 
 	"github.com/aws/aws-lambda-go/events"
+	"github.com/bugfixes/celeste/internal/celeste/account"
 	"go.uber.org/zap"
 
 	"github.com/bugfixes/celeste/internal/celeste/bug"
@@ -45,6 +46,7 @@ func Handler(request events.APIGatewayProxyRequest) (events.APIGatewayProxyRespo
 
 func (c Celeste) parseRequest() (events.APIGatewayProxyResponse, error) {
 	switch c.Request.Path {
+	// <editor-fold desc="Bugs">
 	case "/bug":
 		c.Logger.Infow("bug request received")
 		response, err := bug.NewProcessBug(c.Config, *c.Logger).Parse(c.Request)
@@ -59,7 +61,7 @@ func (c Celeste) parseRequest() (events.APIGatewayProxyResponse, error) {
 			Body:       response.Body,
 		}, nil
 
-	case "/file":
+	case "/bug/file":
 		c.Logger.Infow("file request received")
 
 		response, err := bug.NewProcessFile(c.Config, *c.Logger).Parse(c.Request)
@@ -73,9 +75,43 @@ func (c Celeste) parseRequest() (events.APIGatewayProxyResponse, error) {
 			Headers:    response.Headers,
 			Body:       response.Body,
 		}, nil
+	// </editor-fold>
 
+	// <editor-fold desc="Agent">
 	case "/agent":
-		c.Logger.Infow("agent request recieved")
+		c.Logger.Infow("agent request received")
+		// </editor-fold>
+
+		// <editor-fold desc="Account">
+	case "/account":
+		c.Logger.Infow("create account request received")
+
+		response, err := account.NewAccountRequest(c.Config, *c.Logger, c.Request).Create()
+		if err != nil {
+			c.Logger.Errorf("create account request: %v", err)
+			return events.APIGatewayProxyResponse{}, fmt.Errorf("create account request failed: %w", err)
+		}
+		c.Logger.Infow("create account request processed")
+		return events.APIGatewayProxyResponse{
+			StatusCode: 201,
+			Headers:    response.Headers,
+			Body:       response.Body,
+		}, nil
+
+	case "/account/login":
+		c.Logger.Infow("account login received")
+		response, err := account.NewAccountRequest(c.Config, *c.Logger, c.Request).Login()
+		if err != nil {
+			c.Logger.Errorf("account login request: %v", err)
+			return events.APIGatewayProxyResponse{}, fmt.Errorf("login account request failed: %w", err)
+		}
+		c.Logger.Infow("login account processed")
+		return events.APIGatewayProxyResponse{
+			StatusCode: 200,
+			Headers:    response.Headers,
+			Body:       response.Body,
+		}, nil
+		// </editor-fold>
 	}
 
 	c.Logger.Errorf("unknown request received: %v", c.Request)
